include json2.js

--- a/views/users.jade
+++ b/views/users.jade
@@ -13,7 +13,7 @@ block body
 						
 block append js
 	script(src='/lib/underscore-min.js')
-	script(src='/lib/JSON-js/json2.js')
+	script(src='/lib/json2.js')
 	script(src='/lib/backbone-min.js')
 	script(src='/socket.io/socket.io.js')
 	script(src='/socket.io/backbone.io.js')
