client side templating
use of dustjs instead of underscore for templating

--- a/views/users.jade
+++ b/views/users.jade
@@ -12,6 +12,7 @@ block body
 						#content
 						
 block append js
+	script(src="/lib/dust-full-1.2.0.js")
 	script(src='/lib/underscore-min.js')
 	script(src='/lib/json2.js')
 	script(src='/lib/backbone-min.js')
